--- a/DrinkWater/DrinkWater/Settings.xaml
+++ b/DrinkWater/DrinkWater/Settings.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Settings" Height="1050" Width="1876"
         WindowState="Maximized"
-        WindowStyle="None">
+        WindowStyle="None" Loaded="Window_Loaded">
 
     <Window.Resources>
         <Style x:Key="Combobox" TargetType="{x:Type ComboBox}">
