--- a/DrinkWater/DrinkWater/LogReg/Login.xaml
+++ b/DrinkWater/DrinkWater/LogReg/Login.xaml
@@ -23,7 +23,7 @@
         </Grid.ColumnDefinitions>
 
         <TextBox x:Name="textBoxUsername" Style="{StaticResource LoginTextBox}" HorizontalAlignment="Center" Margin="0,124,0,0" Text="Kycjuxa" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="1" FontFamily="Segoe UI" Foreground="#FF424141"/>
-        <TextBox x:Name="textBoxPassword" Style="{StaticResource LoginTextBox}" HorizontalAlignment="Center" Margin="0,210,0,0" Text="SS20112000" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="1" Foreground="#FF424141"/>
+        <PasswordBox x:Name="textBoxPassword" Style="{StaticResource PasswordBox}" HorizontalAlignment="Center" Margin="0,210,0,0" Password="SS20112000" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="1" Foreground="#FF424141" />
 
         <Button x:Name="buttonCreateNewAccount"   BorderBrush="Transparent"
                 BorderThickness="0" Background="Transparent" Foreground="Black"
