--- a/DrinkWater/DrinkWater/LogReg/Login.xaml
+++ b/DrinkWater/DrinkWater/LogReg/Login.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Drink Water" Height="437.5" Width="700" WindowStartupLocation="CenterScreen">
+        Title="Drink Water" Height="437.5" Width="700" WindowStartupLocation="CenterScreen" Background="#E1EDFD">
     <Grid  HorizontalAlignment="Center" Width="700" Background="#E1EDFD">
         <Grid.RowDefinitions>
             <RowDefinition/>
